# xcursorlocate

./: Cargo.toml  readme.md  shell.nix
examples/: sample_config.toml
src/: animations.rs  main.rs
